src/scss/index.scss
@import url("https://fonts.googleapis.com/css?family=Open+Sans");
@import "../../node_modules/flatpickr/dist/flatpickr.min.css";
@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
@import "./utilities/variables";
@import "./template.css";
@import "../../node_modules/font-awesome/css/font-awesome.min.css";

/*
    < GENERAL RULES >
*/

.left_col {    
    transition: all .3s ease-out;
}

.right_col {
    transition: margin-left .3s ease-out;
}

html, body {
    width: 100%;
    height: 100%;
}

body {
    overflow-x: hidden; 
}

a.active,
a.active:hover {
    color: white !important;
    background: $success !important;
}

.btn > span {
    white-space: pre;
}

.toggle {
    padding-bottom: 16px;
}

.full-width {
    width: 100%;
}

.graph {
    position: relative;
    zoom: 100% !important;    
}

svg {
    box-sizing: content-box;    
}

.message {
    position: absolute;
    margin: auto;
    top: 0; right: 0; bottom: 0; left: 0;
        
    pointer-events: none;
    color: $dark;
    letter-spacing: 1px;
    text-align: center;
    height: 25px;
    font-weight: bold;
    font-size: 20px;
    transition: opacity .5s ease-in;
}

.message.error {
    color: $danger;
    position: relative;
    font-size: 12px;
}

.x_title h2 {
    font-size: 30px;
}

/*
    </ GENERAL RULES >
*/

/*
    < BITCOIN CURRENT PRICE >
*/

.count {
    transition: color 1s ease-in;
}

@keyframes blink {
    0%, 100% {
        color: #73879C;
    }
    50% {
        color: $info;
    }
}

.blinking {
    animation: blink 1s linear 0s normal infinite;
}

#bitcoin-current-price {
    h2 {
        margin-top: 25px;
    }
    .tile_stats_count {
        margin-bottom: 0;
        padding-bottom: 0;
    }
    .count_bottom {
        font-style: italic;
        font-weight: bold;
    }
    @media screen and (max-width: 500px) {
        text-align: center;
        header {
            border-bottom: 1px solid #E6E9ED;
        }
        .tile_stats_count {                           
            margin-top: 25px;
            width: 100%;
        }        
    }
}

/*
    </ BITCOIN CURRENT PRICE >
*/

/*
    < HISTORY GRAPH >
*/

#history {
    .graph {
        display: inline-block !important;
    }
    button.active {
        color: #E9EDEF;
        background-color: $dark;
        border-color: $dark_darker;
    }
    .btn-group {
        .btn {
            padding-left: 8px;
            padding-right: 8px;
        }
    }    
    @media screen and (max-width: 500px) {
        text-align: center;
        h2 {
            width: 100%;
            font-size: 24px;
        }
        .btn-group {
            .btn {
                margin-top: 1px;
                margin-left: 16.5%; // 66.6 / 4 
                width: 66.6%;                
            }
        }
        .graph {
            width: 100% !important;
            overflow-x: scroll;
            overflow-y: hidden;
        }
    }

    input:focus {
        background: inherit;
    }
    .tooltip {
        position: absolute;        
        width: 120px;
        height: auto;
        padding: 5px 10px;
        background-color: #fff;
        border-radius: 5px;
        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
        pointer-events: none;
        font-family: sans-serif;
        font-size: 12px;
        h4, strong {
          margin-top: 2px;
          margin-bottom: 2px;
        }        
    }    
}
/* < CURRENCY PAIR > */

// path[id^="graph-type"] {
//     transition: opacity .6s ease-in;
// }

#currency-pair {
    .graph {
        display: inline-block !important;
    }
    .form-control-feedback.fa-clock-o {
        margin-top: 6px;
    }
    
    .toggle-graphs {
        margin-top: 16px;
    
        .btn span.glyphicon {
            color: white;
        }
        .btn span.glyphicon {
            display: none;
        }
        .btn.active span.glyphicon {
            display: inline;
        }
    }
    .dropdown_container {
        display: inline-block;
    }
    input[name="hours"] {
        max-width: 200px;
    }    
    @media screen and (max-width: 500px) {
        text-align: center;
        h2 {
            width: 100%;
            font-size: 24px;
        }
        .graph {            
            overflow-x: scroll;
            overflow-y: hidden;
            width: 100%;
        }
    }
}

/* </ CURRENCY PAIR > */

/* < CRYPTOBOARD > */

#board-of-crypto-currencies {
    table  {
        th[data-sort-by]:hover {
            color: $info_darker;
            cursor: pointer;
            text-decoration: underline;
        }
    }
    .table-filters {
        h4, .dropdown {
            display: inline-block;
        }
        h4 {
            margin-bottom:  3px;
            padding-right: 3px;
        }
        .dropdown-group {
            .dropdown_container {
                h4 {
                  display: block;                 
                }
            }       
            .dropdown_container {
                margin-left: 50px;
            }
            .dropdown_container:first-child {
                margin-left: 0;
            }
            #reset_dropdown-group {
                margin-left: 50px;
            }            
        }
        .dropdown_container {
            display: inline-block;            
            min-width: 100px;
            margin-left: 25px;
        }
        .table-length {
            display: inline-block;
            margin-left: 50px;
            .btn-group {
                margin-bottom: 5px;
            }     
        }        
    }       
    .modal-window {
        overflow: hidden;
        transition: all .5s ease;
        max-height: 0;
        min-height: 0;     
        .btn-group_container {
            margin-top: 25px;
            h4 {
                margin-bottom: 5px;
            }
        }             
        .controll-group {         
            position: relative;
            right: 10px;
            margin-bottom: 10px;
        }        
    }
    button.active {
        color: white;
        background: $success;
        border: 1px solid $success_darker;
    }
    th {
        text-align: center;
       
        .fa {
            position: relative;
            right: 5px;
        }

        .fa-sort-asc {
            color: $success_darker;
        }
        
        .fa-sort-desc {
            color: $danger;
        }
    }
    td {
        position: relative; 
        text-align: center;
        .btn {         
            margin-top: 5px;
            span.fa {
                display: inline-block;   
            }
        }
        .btn:not(.active) {
            .fa-check {
                opacity: 0;
            }
        }
    }    
    @media screen and (max-width: 720px) {
        text-align: center;
        .table-filters {
            .dropdown-group {
                #reset_dropdown-group {
                    margin-top: 15px;
                    margin-left: 0 !important;
                }
                .dropdown_container {
                    display: block;
                    margin-left: 0 !important;
                }
            }
        }
    }
    @media screen and (max-width: 660px) {
        .modal-window {
            .btn-group_container {
                max-width: 395px;
                margin: 20px auto 0;
                padding: 10px 0;
                .btn {
                    border-radius: 0;
                    width: 33.3333%;
                }
            }
        }
    }
    @media screen and (max-width: 570px) {
        .table-filters {
            .table-length {
                text-align: center;
                display: block;
                margin-left: 0 !important;
            }
            h4 {
                display: block;
            }
        }
    }
    @media screen and (max-width: 500px) {
        text-align: center;
        h2 {
            width: 100%;
            font-size: 20px;
        }
        #modal-button {
            padding: 8px 14px;
            font-size: 16px;            
        }
        .modal-window {            
            .graph {
                width: 100%;
                overflow-x: scroll;
                overflow-y: hidden;
            }
            .btn-group_container,
            .controll-group {
                .btn {
                    margin-top: 1px;                    
                    width: 66.6%;
                }
            }
            .btn-group_container {
                .btn {
                    margin-left: 16.5%; // 66.6 / 4 
                }
            }
            .controll-group {
                right: 0;
                margin: 0 auto 15px;
                .btn {
                    margin-left: auto;
                    margin-right: auto;
                }
            }
        } 
    }       
}

#word-length-tester {
    padding: 0;
    margin: 0;
    position: absolute;
    visibility: hidden;
    display: inline-block;
    font-weight: bold;
}

.legend {
    max-width: 720px;
    //margin: 0 auto;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    padding-bottom: 32px;
    font-size: 16px;
    @media screen and (max-width: 500px) {        
        display: block;
        text-align: left;
    }
}

.legend_item {
    min-width: 10%;    
}

.legend_item:hover {
    cursor: pointer;
    font-weight: bold;
}

.legend_item span:last-child {
    margin-left: 10px;
    margin-right: 5px;
}

.arc, 
.bar rect {
    transition: opacity .5s ease-in;
}

.arc:hover,
.bar rect:hover {
    cursor: pointer;
}

.square {
    display: inline-block;
    width: 15px;
    height: 15px;
}

/* </ CRYPTOBOARD > */

/* < SETTINGS PAGE >  */

#component-display {
    height: 100vh;
    span.title {
        font-size: 24px;
    }
    .btn {
      min-width: 52px;
    }
}

/* </ SETTINGS PAGE >  */

/* < GALLERY > */

#saved-graphs {
    min-height: 100vh;
    p {
        font-size: 18px;
    }
    a {
        color: $info_darker;
        margin-left: 50px;
    }
    a:hover {
        color: $info;
    }
    .x_panel {
        text-align: right;        
    }
    .x_panel:first-child {
        margin-top: 25px;
    }
    .fa-times {
        display: inline;
        margin: 10px 10px 0 0;
    }
    .fa-times:hover {
        cursor: pointer;
        color: $danger;
    }
    @media screen and (max-width: 500px) {
        .x_panel {            
            overflow: scroll;
            text-align: left;
        }
    }
}

// POP UP



/* </ GALLERY > */

